# vertical-ai-agents

./: .gitignore
candidate-evaluation/: agents.py  api.py  crew.py  cv_agent.py  cv_crew.py  email_monitor_main.py  fallback_estimator.py  filtered_crew.py  main.py  matching_crew.py  matching_engine.py  pyproject.toml  railway.json  railway_start.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  single_meet_crew.py  tasks.py  test_api.py  test_cv_reader.py  test_main.py  test_specific_cv.py  test_vector_search.py  tracking.py
candidate-evaluation/database/: setup-audit-log.sql  setup-pgvector.sql
candidate-evaluation/docs/: ANALISIS_FINAL_TESTING.md  AUDIT_LOG.md  CV_READ_PROCESS.md  PGVECTOR_SETUP.md  PROCESSES.md  SETUP.md  TESTING.md  VECTOR_SEARCH_TESTING.md
candidate-evaluation/scripts/: index_initial_data.py
candidate-evaluation/tests/: conftest.py  test_agents_smoke.py  test_api_audit_events.py  test_api_candidate_and_chatbot.py  test_api_chatbot_success.py  test_api_elevenlabs_smoke.py  test_api_elevenlabs_success.py  test_api_evaluate_meet.py  test_api_evaluation_jobs.py  test_api_formatters.py  test_api_matching_long_task.py  test_api_matching_routes.py  test_api_read_cv.py  test_api_status.py  test_audit_log.py  test_crew_smoke.py  test_cv_tools.py  test_elevenlabs_tools.py  test_helpers.py  test_main_smoke.py  test_matching_engine.py  test_stack_matches_needle.py  test_supabase_tools.py  test_tasks_smoke.py  test_tech_stack_extraction.py  test_utils_logger.py  test_vector_tools.py
candidate-evaluation/tools/: cv_tools.py  (+5 more)
(+13 files in other folders)
